[package]
name = "syncron"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dashmap = "6.1.0"
dirs = "6.0.0"
filetime = "0.2.27"
ignore = "0.4.25"
indicatif = "0.18.4"
num_cpus = "1.17.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rayon = "1.11.0"
redb = "3.1.0"
serde = "1.0.228"
